start implementation of measurement point display

--- a/trafficcounter-frontend/src/app/map/map.component.html
+++ b/trafficcounter-frontend/src/app/map/map.component.html
@@ -1,6 +1,8 @@
 <h1>Map</h1>
 <div id="map-container">
 
-  <app-map-display></app-map-display>
+  <app-map-display
+    [measurement-points]="measurementPoints"
+  ></app-map-display>
 </div>
 
