--- a/trafficcounter-frontend/src/app/pages/map/components/map-menu/map-menu.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-menu/map-menu.component.html
@@ -1,3 +1,6 @@
 <div class="map-menu">
-  Map Config
+  <mat-button-toggle-group name="mode" [formControl]="modeControl" (change)="updateMode()">
+    <mat-button-toggle value="measurementPoints">{{ 'map.menu.measurement-points' | translate }}</mat-button-toggle>
+    <mat-button-toggle value="vehicleAmount">{{ 'map.menu.vehicle-amount' | translate }}</mat-button-toggle>
+  </mat-button-toggle-group>
 </div>
