add components for speed display

--- a/trafficcounter-frontend/src/app/pages/map/map.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/map.component.html
@@ -6,6 +6,7 @@
     <app-map-display
       [measurement-points]="measurementPoints$"
       [vehicle-amount]="vehicleAmount$"
+      [vehicle-speed]="vehicleSpeed$"
     ></app-map-display>
   </div>
 </div>
