--- a/trafficcounter-frontend/src/app/pages/map/components/map-menu/map-menu.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-menu/map-menu.component.html
@@ -2,5 +2,6 @@
   <mat-button-toggle-group name="mode" [formControl]="modeControl" (change)="updateMode()">
     <mat-button-toggle value="measurementPoints">{{ 'map.menu.measurement-points' | translate }}</mat-button-toggle>
     <mat-button-toggle value="vehicleAmount">{{ 'map.menu.vehicle-amount' | translate }}</mat-button-toggle>
+    <mat-button-toggle value="vehicleSpeed">{{ 'map.menu.vehicle-speed' | translate }}</mat-button-toggle>
   </mat-button-toggle-group>
 </div>
