--- a/trafficcounter-frontend/src/app/pages/map/map.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/map.component.html
@@ -5,8 +5,7 @@
        [class.full-width]="!(showMenu | async)">
     <app-map-display
       [measurement-points]="measurementPoints$"
-      [vehicle-amount]="vehicleAmount$"
-      [vehicle-speed]="vehicleSpeed$"
+      [vehicle-data]="vehicleData$"
     ></app-map-display>
   </div>
 </div>
