add basic info card component, restructure map event handling

--- a/trafficcounter-frontend/src/app/pages/map/components/map-menu-bar/map-menu-bar.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-menu-bar/map-menu-bar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="secondary" class="map-menu-toolbar">
-  <button mat-icon-button (click)="toggleShowMenu()">
+  <button mat-icon-button (click)="toggleShowSidebar()">
       <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
