--- a/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
@@ -1,7 +1,15 @@
-<div class="map-menu">
+<div class="map-sidebar">
   <mat-button-toggle-group name="mode" [formControl]="modeControl" (change)="updateMode()">
     <mat-button-toggle value="measurementPoints">{{ 'map.menu.measurement-points' | translate }}</mat-button-toggle>
     <mat-button-toggle value="vehicleAmount">{{ 'map.menu.vehicle-amount' | translate }}</mat-button-toggle>
     <mat-button-toggle value="vehicleSpeed">{{ 'map.menu.vehicle-speed' | translate }}</mat-button-toggle>
   </mat-button-toggle-group>
+
+  <div *ngIf="selectedPointInfo$ | async as selectedPointInfo">
+    <app-info-card
+      *ngIf="selectedPointInfo !== null"
+      [info]="selectedPointInfo"
+    ></app-info-card>
+  </div>
+
 </div>
