--- a/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
@@ -1,5 +1,5 @@
 <div class="map-sidebar">
-  <mat-button-toggle-group name="mode" [formControl]="modeControl" (change)="updateMode()">
+  <mat-button-toggle-group (change)="updateMode()" [formControl]="modeControl" name="mode">
     <mat-button-toggle value="measurementPoints">{{ 'map.menu.measurement-points' | translate }}</mat-button-toggle>
     <mat-button-toggle value="vehicleAmount">{{ 'map.menu.vehicle-amount' | translate }}</mat-button-toggle>
     <mat-button-toggle value="vehicleSpeed">{{ 'map.menu.vehicle-speed' | translate }}</mat-button-toggle>
