start histogram implementation

--- a/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
@@ -12,4 +12,15 @@
     ></app-info-card>
   </div>
 
+  <app-histogram-menu></app-histogram-menu>
+
+  <div *ngIf="histogramDuration$ | async as histogramDuration">
+    <div *ngIf="histogramData$ | async as histogramData">
+    <app-histogram
+      *ngIf="histogramDuration !== null && histogramData !== null"
+      [duration]="histogramDuration"
+      [data]="this.histogramData"
+    ></app-histogram>
+  </div>
+
 </div>
