--- a/trafficcounter-frontend/src/app/pages/map/components/histogram-menu/histogram-menu.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/histogram-menu/histogram-menu.component.html
@@ -1,4 +1,4 @@
 <mat-button-toggle-group name="histogram-duration" (change)="updateDuration($event)">
-  <mat-button-toggle value="24h">24h</mat-button-toggle>
-  <mat-button-toggle value="7d">7d</mat-button-toggle>
+  <mat-button-toggle value="24h">{{ 'map.histogram.menu.24h' | translate }}</mat-button-toggle>
+  <mat-button-toggle value="7d">{{ 'map.histogram.menu.7d' |translate }}</mat-button-toggle>
 </mat-button-toggle-group>
