--- a/trafficcounter-frontend/src/app/pages/map/components/info-card/info-card.component.scss
+++ b/trafficcounter-frontend/src/app/pages/map/components/info-card/info-card.component.scss
@@ -1,7 +1,13 @@
-table {
-  tr {
-    th {
-      text-align: left;
+.info-card {
+  display: flex;
+  flex-direction: column;
+  table {
+    width: 100%;
+    tr {
+      th {
+        text-align: left;
+      }
     }
   }
 }
+
