--- a/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.scss
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.scss
@@ -5,4 +5,20 @@
     display: flex;
     flex-direction: column;
   }
+
+  .selected-point-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .info-card-wrapper {
+      display: flex;
+      justify-content: center;
+    }
+
+    & > * {
+      margin: 2vh 0;
+    }
+
+  }
 }
