add estimated speed limit to measurement points

--- a/trafficcounter-frontend/src/app/pages/map/components/info-card/info-card.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/info-card/info-card.component.html
@@ -17,6 +17,10 @@
         <td>{{ info.speedData?.averageSpeed }} km/h</td>
       </tr>
       <tr>
+        <th>{{ 'map.info-card.description.estimated-speed-limit' | translate }}:</th>
+        <td>{{ info.speedData?.estimatedSpeedLimit }} km/h</td>
+      </tr>
+      <tr>
         <th>{{ 'map.info-card.description.number-of-vehicles' | translate }}:</th>
         <td>{{ info.vehicleAmount?.numberOfVehicles }}</td>
       </tr>
