split histograms into two separate diagrams

--- a/trafficcounter-frontend/src/app/pages/map/components/histogram/histogram.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/histogram/histogram.component.html
@@ -1,1 +1,2 @@
-<canvas #histogram class="histogram"></canvas>
+<canvas #speedDataHistogram class="histogram"></canvas>
+<canvas #vehicleAmountHistogram class="histogram"></canvas>
