--- a/trafficcounter-frontend/src/app/pages/map/components/map-menu-bar/map-menu-bar.component.scss
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-menu-bar/map-menu-bar.component.scss
@@ -3,4 +3,10 @@
   position: -webkit-sticky; /* Safari */
   top: 0;
   z-index: 1000;
+
+ .map-options mat-button-toggle {
+   font-size: 12pt;
+   font-weight: normal;
+ }
+
 }
