--- a/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
+++ b/trafficcounter-frontend/src/app/pages/map/components/map-side-bar/map-side-bar.component.html
@@ -18,6 +18,9 @@
       [duration]="histogramDuration$"
       [data]="histogramData$"
     ></app-histogram>
+
+    <div class="spacer"></div>
+
   </div>
 
 </div>
